welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:4: error: value =< is not a member of Int
while (t=<49){
        ^